# flask_vuetify_template

./: .gitignore  README.md  app.py  build.sh  pyproject.toml  render.yaml
ui/: bun.lockb  package.json
